# wasm-tools

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs  compare-master.sh  coverage.sh  demo.wit  logs.txt  publish.rs  rustfmt.toml  test-all.sh  test_glob
crates/c-api/: CMakeLists.txt  Cargo.toml  README.md  doxygen.conf
crates/c-api/include/: wasm-tools.h
crates/c-api/src/: lib.rs
crates/dump/: Cargo.toml
crates/dump/src/: lib.rs
crates/fuzz-stats/: Cargo.toml
crates/fuzz-stats/src/: dummy.rs  lib.rs  limits.rs
crates/json-from-wast/: Cargo.toml
crates/json-from-wast/src/: build.rs  lib.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: binary.rs  lexer.rs  lib.rs  parser.rs
crates/registry-metadata/: Cargo.toml
crates/registry-metadata/src/: lib.rs
crates/wasm-bundle/: Cargo.toml
crates/wasm-bundle/src/: lib.rs
crates/wasm-componentize/: Cargo.toml  README.md
crates/wasm-componentize/src/: cli.rs  lib.rs
crates/wasm-compose/: CONFIG.md  Cargo.toml  README.md
crates/wasm-compose/example/: README.md  encryption.wit  op.wit  service.wit
crates/wasm-compose/src/: cli.rs  composer.rs  config.rs  encoding.rs  graph.rs  lib.rs
crates/wasm-compose/tests/: compose.rs
crates/wasm-encoder/: Cargo.toml  README.md
crates/wasm-encoder/src/: adapter.rs  adapters.rs  aliases.rs  code.rs  component.rs  components.rs  core.rs  custom.rs  data.rs  elements.rs  encoders.rs  exports.rs  functions.rs  globals.rs  imports.rs  instances.rs  lib.rs  linking.rs  memories.rs  module_code.rs  modules.rs  names.rs  raw.rs  reencode.rs  start.rs  tables.rs  tags.rs  types.rs
crates/wasm-encoder/tests/: linking.rs
crates/wasm-metadata/: Cargo.toml
crates/wasm-metadata/src/: add_metadata.rs  component_name.rs  dependencies.rs  lib.rs  metadata.rs  module_name.rs  payload.rs  producers.rs  registry.rs  rewrite.rs  utils.rs
crates/wasm-metadata/tests/: component.rs  module.rs  producers.rs  registry.rs  test.rs
crates/wasm-mutate/: Cargo.toml  README.md  test.wat
crates/wasm-mutate-stats/: .gitignore  Cargo.toml
crates/wasm-mutate/src/: error.rs  info.rs  lib.rs  module.rs  mutators.rs
crates/wasm-mutate/tests/: tests.rs
crates/wasm-shrink/: Cargo.toml  README.md
crates/wasm-shrink/src/: lib.rs
crates/wasm-shrink/tests/: tests.rs
crates/wasm-smith/: Cargo.toml  README.md  test.wat
crates/wasm-smith/benches/: corpus.rs
crates/wasm-smith/fuzz/: Cargo.toml
crates/wasm-smith/include/: wasm-smith.h
crates/wasm-smith/src/: api.rs  ast.rs  code_builder.rs  component.rs  config.rs  core.rs  encode.rs  kebab.rs  lib.rs  notrap.rs  terminate.rs
crates/wasm-smith/tests/: available_imports.rs  component.rs  core.rs  exports.rs  module_shape.rs  tests.rs
crates/wasm-types/: Cargo.toml  README.md
crates/wasm-types/src/: lib.rs
crates/wasm-wave/: Cargo.toml  README.md  wave_ebnf.md
crates/wasm-wave/src/: ast.rs  lex.rs  lib.rs  parser.rs  strings.rs  untyped.rs  writer.rs
crates/wasm-wave/tests/: nan.rs  types.wit  ui.rs
crates/wasmemit/: Cargo.toml
crates/wasmemit/src/: lib.rs  reader.rs
crates/wasmemit/tests/: emit.rs  replace_import.rs  replace_memory.rs
crates/wasmparser/: .gitignore  Cargo.toml  README.md  compare-master.sh  compare-with-main.sh
crates/wasmparser/benches/: benchmark.rs  intgemm-simd.wasm  lots-of-empty-fn-types.wasm  lots-of-unique-fn-types.wasm
crates/wasmparser/examples/: dump.rs  simple.rs  validate.rs  wasm-validate.rs
crates/wasmparser/fuzz/: Cargo.toml
crates/wasmparser/src/: arity.rs  binary_reader.rs  component.rs  define_types.rs  error.rs  features.rs  for_each_simd_op.rs  hint.rs  lib.rs  limits.rs  map.rs  module_resources.rs  offsets.rs  operators_validator.rs  parser.rs  primitives.rs  readers.rs  resources.rs  tests.rs  validator.rs
crates/wasmparser/tests/: all.rs  big-module.rs  br_if-loop-stack.wasm  errors.rs  legacy-exception.rs  legacy-exceptions.rs  reloc.wasm
crates/wasmprinter/: .gitignore  Cargo.toml
crates/wasmprinter/fuzz/: Cargo.toml
crates/wasmprinter/src/: component.rs  lib.rs  operand_stack.rs  operand_stack_disabled.rs  operator.rs  print.rs
crates/wasmprinter/tests/: all.rs  wabt.rs
crates/wast/: Cargo.toml  README.md
crates/wast/src/: binary.rs  component_disabled.rs  component_names.rs  encode.rs  error.rs  gensym.rs  lexer.rs  lib.rs  names.rs  parser.rs  token.rs  wast.rs  wat.rs
crates/wast/tests/: .gitattributes  annotations.rs  parse-component.rs  parse-fail.rs  recursive.rs
crates/wat/: .gitignore  Cargo.toml  README.md
crates/wat/src/: lib.rs
crates/wit-component/: Cargo.toml  README.md
crates/wit-component/dl/: Cargo.toml  build.sh  check.sh
crates/wit-component/fuzz/: Cargo.toml
crates/wit-component/src/: builder.rs  cli.rs  decoding.rs  dummy.rs  encoding.rs  extract.rs  gc.rs  lib.rs  linking.rs  metadata.rs  printing.rs  semver_check.rs  targets.rs  validation.rs
crates/wit-component/test-helpers/: Cargo.toml
crates/wit-deps/: Cargo.toml  README.md
crates/wit-dylib/: Cargo.toml  README.md  wit_dylib.h
examples/: CMakeLists.txt  README.md  dump.rs  main.c  simple.rs  wasm-smith.c  wasm-smith.rs  wat2wasm.rs
examples/wit-deps/: main.rs
fuzz/: Cargo.toml  crash-992d1f2803f69169bbf7094df5adf7f32bd1b2b7  crash-9abfe1eb9408990422dbcfd2db05af06e66e1771  crash-df7c327b2cfc629ecef5ca026cd96d0fb725a00b  crash-e348f91ff68fac2cc81c1a6ac426ba3c30f58a85  test.wat
fuzz/fuzz_targets/: binary-parse.rs  binary.rs  incremental-parse.rs  lexer.rs  mutate.rs  no-traps.rs  parse.rs  parser.rs  print-valid-module.rs  print.rs  roundtrip-valid-module.rs  roundtrip-wit.rs  roundtrip.rs  run.rs  text-lexer.rs  text-parser.rs  validate-component.rs  validate-ensure-termination.rs  validate-swarm.rs  validate-valid-module.rs  validate.rs  wasm-opt-ttf.rs
fuzz/src/: incremental_parse.rs  lib.rs  mutate.rs  no_traps.rs  print.rs  reencode.rs  roundtrip.rs  roundtrip_wit.rs  text_parser.rs  validate.rs  validate_valid_module.rs  wit64.rs
(+10965 files in other folders)
