[package]
name = "wasm-tools"
version = "0.1.0"
authors = ["The Wasmtime Project Developers"]
edition = "2018"
publish = false

[workspace]
members = ['fuzz', 'crates/wasm-encoder']

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
getopts = "0.2"
log = "0.4"
rayon = "1.0"
wasmparser = { path = "crates/wasmparser" }
wasmprinter = { path = "crates/wasmprinter" }
wast = { path = "crates/wast" }
wat = { path = "crates/wat" }
wasmparser-dump = { path = "crates/dump" }

[dev-dependencies]
anyhow = "1.0"
getopts = "0.2"
serde_json = "1.0"
tempfile = "3.1"
diff = "0.1"
wasmparser-dump = { path = 'crates/dump' }

[[test]]
name = "dump"
harness = false

[[test]]
name = "roundtrip"
harness = false
