[package]
name = "wasm-tools-fuzz"
publish = false
edition.workspace = true
rust-version.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true }
env_logger = { workspace = true }
libfuzzer-sys = { workspace = true }
log = { workspace = true }
tempfile = "3.0"
wasm-mutate = { path = "../crates/wasm-mutate" }
wasm-smith = { path = "../crates/wasm-smith" }
wasmparser = { path = "../crates/wasmparser" }
wasmprinter = { path = "../crates/wasmprinter" }
wasmtime = { workspace = true, optional = true }
wast = { path = "../crates/wast" }
wat = { path = "../crates/wat" }
wit-parser = { path = "../crates/wit-parser" }
wit-smith = { path = "../crates/wit-smith" }
wit-component = { path = "../crates/wit-component", features = ['dummy-module'] }
wasm-encoder = { path = "../crates/wasm-encoder" }

[dependencies.wit-parser-old]
package = 'wit-parser'
version = '0.214.0'

[dependencies.wit-component-old]
package = 'wit-component'
version = '0.214.0'

[lib]
test = false
doctest = false

[[bin]]
name = "run"
path = "fuzz_targets/run.rs"
test = false
bench = false
