[package]
name = "wasm-tools-c-api"
authors = ["Addison Hart <tgr@tgrcode.com>"]
categories = ["development-tools", "development-tools::testing", "wasm"]
description = "C API to expose wasm-tools"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/c-api"
version = "0.1.1"
publish = false

[lib]
name = "wasmtools"
crate-type = ["cdylib"]
doc = false
test = false
doctest = false

[dependencies]
arbitrary = { version = "1.1.0", features = ["derive"] }
wasmparser-dump = { version = "0.1.4", path = "../dump" }
wasm-mutate = { version = "0.2.4", path = "../wasm-mutate" }
wasm-shrink = { version = "0.1.6", path = "../wasm-shrink" }
wasm-smith = { version = "0.11.1", path = "../wasm-smith" }
wasmparser = { version = "0.86.0", path = "../wasmparser" }
wasmprinter = { version = "0.2.36", path = "../wasmprinter" }
wast = { version = "42.0.0", path = "../wast" }
wat = { version = "1.0.44", path = "../wat" }
