[package]
name = "wasm-tools-c-api"
authors = ["Addison Hart <tgr@tgrcode.com>"]
categories = ["development-tools", "development-tools::testing", "wasm"]
description = "C API to expose wasm-tools"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/c-api"
version = "0.1.1"
publish = false

[lib]
name = "wasmtools"
crate-type = ["cdylib"]
doc = false
test = false
doctest = false

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
wasm-mutate = { workspace = true }
wasm-shrink = { workspace = true }
wasm-smith = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }
wast = { workspace = true }
wat = { workspace = true }
