[package]
name = "wasm-tools-c-api"
authors = ["Addison Hart <tgr@tgrcode.com>"]
categories = ["development-tools", "development-tools::testing", "wasm"]
description = "C API to expose wasm-tools"
edition.workspace = true
# Note that this is intentionally not the workspace's license. For more
# information see #1637.
license = "Apache-2.0 WITH LLVM-exception"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/c-api"
publish = false
rust-version.workspace = true

[lib]
name = "wasmtools"
crate-type = ["cdylib"]
doc = false
test = false
doctest = false

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
wasm-mutate = { workspace = true }
wasm-shrink = { workspace = true }
wasm-smith = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }
wast = { workspace = true }
wat = { workspace = true }
