[package]
name = "wasmparser-dump"
version = "0.1.6"
authors = ["The Wasmtime Project Developers"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/dump"
description = "Utility to dump debug information about the wasm binary format"

[dependencies]
anyhow = "1"
wasmparser = { path = "../wasmparser", version = "0.88.0" }
