[package]
name = "fuzz-stats"
edition.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
wasm-smith = { workspace = true }
wasmtime = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
test = false
