[package]
name = "wast-parser"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/wast/tree/master/crates/parser"
homepage = "https://github.com/alexcrichton/wast/tree/master/crates/parser"
documentation = "https://docs.rs/wast-parser"
description = """
Customizable Rust parsers for the WebAssembly Text formats WAT and WAST
"""

[dependencies]
leb128 = "0.2"

[dev-dependencies]
rayon = "1.0"
anyhow = "1.0"
tempfile = "3.1"
wasmparser = "0.39"
serde_json = "1.0"
