[package]
name = "registry-metadata"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/registry-metadata"
description = "Read and manipulate WebAssembly registry metadata"

[[bin]]
name = "registry-metadata-cli"
path = "src/bin/cli.rs"
required-features = ["clap"]

[features]
default = ["clap"]
clap = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
anyhow = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
spdx = "0.10.1"

[dev-dependencies]
wat = { workspace = true }
