[package]
name = "wasm-compose"
version.workspace = true
edition.workspace = true
authors = ["Peter Huene <peter@huene.dev>"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-compose"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-compose"
documentation = "https://docs.rs/wasm-compose"
description = "A library for composing WebAssembly components."
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wat = { workspace = true }
wasm-encoder = { workspace = true, features = ['wasmparser'] }
wasmparser = { workspace = true, features = ['validate'] }
indexmap = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
petgraph = "0.6.2"
log = { workspace = true }
serde_yaml = "0.9.22"
smallvec = "1.10.0"
heck = "0.4.0"
im-rc = "15.1.0"

[dev-dependencies]
glob = "0.3.0"
pretty_assertions = "1.2.1"
wasmprinter = { workspace = true }
wit-component = { workspace = true }
