[package]
name = "wasm-encoder"
version = "0.9.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-encoder"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-encoder"
documentation = "https://docs.rs/wasm-encoder"
description = """
A low-level WebAssembly encoder.
"""

[dependencies]
leb128 = "0.2.4"

[dev-dependencies]
anyhow = "1.0.38"
tempfile = "3.2.0"
wasmparser = { path = "../wasmparser" }
